--- a/css/style.css
+++ b/css/style.css
@@ -6,158 +6,133 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: inherit; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
   color: #777;
-  padding: 30px;
-}
+  padding: 3rem;
+  box-sizing: border-box; }
 
-header {
+html {
+  font-size: 10px; }
+
+.header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom,rgba(126,213,111,0.8), rgba(40,180,131,0.8)),url(../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 131, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(1% 0, 100% 0, 100% 80%, 0% 100%);
-  position: relative;  
-}
-
-.logo-box {
+  position: relative; }
+  .header__logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
-}
-.logo{
-    height: 35px;
-}
-
-.text-box {
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
     position: absolute;
-    top:40%;
+    top: 40%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    text-align:center ;
-}
+    transform: translate(-50%, -50%);
+    text-align: center; }
 
 .heading-primary {
-    color: #fff;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-}
-.heading-primary-main{
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden; }
+  .heading-primary--main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
-    animation:moveInLeft 1s ease-out ;
-}
-.heading-primary-sub{
+    letter-spacing: 3.5rem;
+    animation: moveInLeft 1s ease-out; }
+  .heading-primary--sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17px;
-    animation:moveInRight 1s ease-out  ;
-}
+    letter-spacing: 1.7rem;
+    animation: moveInRight 1s ease-out; }
 
 @keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-    80% {
-        transform: translateX(20px);
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(2rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-@keyframes moveInRight{
-    0% {
-        opacity: 0;
-        transform: translateX(100px);
-    }
-
-    80% {
-        transform: translateX(-20px);
-
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-2rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
 .btn:link,
 .btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    transition: all .2s;
-    position: relative;
-    animation: moveInBottom 1s ease-out 0.75s;
-    animation-fill-mode: backwards;
-}
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  transition: all .2s;
+  position: relative;
+  animation: moveInBottom 1s ease-out 0.75s;
+  animation-fill-mode: backwards;
+  font-size: 1.6rem; }
+
+.btn--white {
+  background-color: #fff;
+  color: #777;
+  margin-top: 6rem;
+  border-radius: 4rem; }
+
 .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-}
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-}
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
-.btn-white {
-    background-color: #fff;
-    color: #777;
-    margin-top:60px ;
-    border-radius: 40px;
-}
 .btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius:40px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
-.btn::after{
-    background-color: #fff;
-}
-.btn:hover::after{
-    transform: scale(1.5);
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 4rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--white::after {
+  background-color: #fff; }
+
+.btn:hover::after {
+  transform: scale(1.5);
+  opacity: 0; }
+
+@keyframes moveInBottom {
+  0% {
     opacity: 0;
-}
-
-@keyframes moveInBottom{
-    0% {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-
-    80% {
-        transform: translateY(-10px);
-
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+    transform: translateY(5rem); }
+  80% {
+    transform: translateY(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
