--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -2,4 +2,10 @@ $primary-color: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-grey-dark: #777;
-$color-white: #fff;
+$color-white:#fff;
+
+//Grid
+
+$grid-width: 144rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
