--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,12 +8,11 @@
 @import "./abstracts/variables.scss";
 
 @import "./pages/home.scss";
+
 @import "./components/button.scss";
 
 @import "./layout/header.scss";
-
-
-
+@import "./layout/grid.scss"
 
 
 
