--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,48 @@ body {
   color: #777;
   padding: 3rem; }
 
+.heading-secondary {
+  display: inline-block;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-transform: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 30rem 0;
+  margin-top: -20vh; }
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -111,6 +153,46 @@ body {
   transform: scale(1.5);
   opacity: 0; }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 0.1rem solid #55c57a;
+  padding: 0.3rem; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: white;
+  transition: 0.5s; }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: .2rem;
+    position: absolute;
+    z-index: 1; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 9rem; }
+    .composition__photo:hover {
+      outline: 0.1rem solid black;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5);
+      transition: 0.5s;
+      z-index: 2; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9);
+    transition: 0.5s; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 131, 0.8)), url(../img/hero.jpg);
@@ -132,28 +214,25 @@ body {
     text-align: center; }
 
 .row {
-  max-width: 144rem;
+  max-width: 114rem;
   background-color: #eee;
   margin: 0 auto;
   margin-bottom: 8rem; }
   .row [class^="col-"] {
-    background-color: orangered;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-bottom: 8rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 6rem) /2);
-    background-color: orangered;
-    float: left; }
+    width: calc((100% - 2rem) /2); }
     .row .col-1-of-2:not(:last-child) {
-      margin-right: 6rem; }
+      margin-right: 2rem; }
   .row .col-1-of-3 {
-    width: calc((100% - 2*6rem) /3); }
+    width: calc((100% - 2*2rem) /3); }
   .row .col-2-of-3 {
-    width: calc(2*((100% - 2*6rem) /3)+6rem); }
+    width: calc(2*((100% - 2*2rem) /3)+2rem); }
   .row .col-1-of-4 {
-    width: calc((100% - 3*6rem) /4); }
+    width: calc((100% - 3*2rem) /4); }
   .row .col-2-of-4 {
-    width: calc(2*((100% - 2*6rem) /4)+6rem); }
+    width: calc(2*((100% - 2*2rem) /4)+2rem); }
   .row .col-3-of-4 {
-    width: calc(3*((100% - 2*6rem) /4)+2*6rem); }
+    width: calc(3*((100% - 2*2rem) /4)+2*2rem); }
