--- a/sass/base/typography.scss
+++ b/sass/base/typography.scss
@@ -30,3 +30,31 @@ body {
     color: $color-grey-dark;
     padding: 3rem;
 }
+
+.heading-secondary {
+    display: inline-block;
+    font-size : 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(to right, $color-primary-light,$color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+    &:hover {
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
+        text-transform: .5rem 1rem 2rem rgba(black,0.2) ;
+    }
+}
+.heading-tertiary {
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 1.6rem;
+}
+.paragraph {
+    font-size: 1.6rem;
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
