--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -49,3 +49,20 @@
     transform: scale(1.5);
     opacity: 0;
 }
+
+.btn-text {
+    &:link,
+    &:visited {
+        font-size:$default-font-size;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 0.1rem solid $color-primary ;
+        padding: 0.3rem;
+    }   
+    &:hover {
+        background-color: $color-primary;
+        color: white;
+        transition: 0.5s;
+    }
+}
