--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,9 +10,10 @@
 @import "./pages/home.scss";
 
 @import "./components/button.scss";
+@import "./components/composition.scss";
 
 @import "./layout/header.scss";
-@import "./layout/grid.scss"
+@import "./layout/grid.scss";
 
 
 
